Updated consile display of photos for managing images.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -91,6 +91,53 @@ div.manage a.btn.manage {
 .entity-left.control-group .controls { margin-left: 0 }
 .entity-left.control-group .controls .controls { margin-left: 160px }
 
+.control-group .photo-list .well {
+    display: inline-block;
+    width: 100%;
+    padding: 0;
+}
+
+.photo-list .well div {
+    width: 100%;
+    float: left;
+    display: inline-block;
+    margin: 0;
+}
+
+.photo-list .well .actions {
+    border-bottom: 1px solid #E3E3E3;
+    background: #E3E3E3;
+}
+
+.control-group .actions div {
+    float: left;
+    width: auto;
+    padding: 10px;
+}
+.control-group .actions ul {
+    list-style: none;
+    display: inline-block;
+    margin: 0;
+    padding: 10px;
+    float: right;
+}
+
+.control-group .actions li {
+    display: inline-block;
+    float: left;
+}
+
+.photo-list .well .image img {
+    padding: 10px;
+    float: left;
+    width: 120px;
+}
+.photo-list .well .image p {
+    padding: 10px;
+    float: left;
+    width: 75%;
+}
+
 /*  ----------
     :: Nested Tree
     ---------- */
