--- a/Resources/views/User/passwordset.html.twig
+++ b/Resources/views/User/passwordset.html.twig
@@ -3,8 +3,7 @@
 {% block content %}
 <p>Please set your password for accessing the Console.</p>
 <form action="{{ path('console_users_password_set', {'token': token}) }}" {{ form_enctype(form) }} method="POST" class="form-horizontal well" novalidate>
-    {{ form_widget(form.new) }}
-    {{ form_rest(form) }}
+    {{ form_widget(form) }}
     <div>
         <input type="submit" class="btn btn-primary" value="Set Password" />
     </div>
