Updated console with formatting.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -44,7 +44,7 @@ div.manage a.btn.manage {
     padding: 0 10px;
 }
 
-.main-display { 
+.main-display {
     max-width: 1170px;
     margin: 0 auto;
 }
@@ -138,6 +138,9 @@ div.manage a.btn.manage {
     width: 75%;
 }
 
+.container.controls { margin-left: 0 }
+    .container.controls .help-block { margin-left: 180px }
+
 /*  ----------
     :: Nested Tree
     ---------- */
@@ -206,7 +209,7 @@ div.remember-me input {
 
     .navbar .nav .menu-dropdown li.active > a, .navbar .nav .menu-dropdown li.active > a:hover {
         color: #366DDC;
-        font-weight: bold; 
+        font-weight: bold;
     }
     .navbar .nav .menu-dropdown li.active > a:hover { text-decoration: underline }
     .menu-dropdown li:hover { background: #E4E4E4 }
@@ -220,7 +223,7 @@ div.remember-me input {
     .navbar .nav li.dropdown.active:hover { background: #E4E4E4 !important }
     .navbar .nav li.dropdown.active > .dropdown-toggle:hover { color: #333342; border-bottom: none; }
 
-    .menu-dropdown li a.main { 
+    .menu-dropdown li a.main {
         font-weight: bold;
         padding: 0.5em 1.0em;
     }
