Updated styling for the Contol groups and actions to pass functional tests.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -138,8 +138,26 @@ div.manage a.btn.manage {
     width: 75%;
 }
 
-.container.controls { margin-left: 0 }
-    .container.controls .help-block { margin-left: 180px }
+/*.container.controls { margin-left: 0 }
+    .container.controls .help-block { margin-left: 180px }*/
+
+.collection-item .control-group .controls {
+    width: 300px;
+    float:left;
+}
+
+.form-actions {
+    float: left;
+    width: 46.5%;
+}
+    .form-horizontal .form-actions,
+    .form-actions { padding: 30px 20px !important }
+    .form-actions form {
+        margin-bottom: 0;
+    }
+    .form-actions.last {
+        text-align: right;
+    }
 
 /*  ----------
     :: Nested Tree
