Updated image preview to check if value exists.

--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -5,7 +5,9 @@
 
 {% block preview_file_widget %}
     {% spaceless %}
-        <div class="preview"><img src="{{ asset(preview) | imagine_filter('thumb') }}" /></div>
+        <div class="preview">
+            {% if preview %}<img src="{{ asset(preview) | imagine_filter('thumb') }}" />{% endif %}
+        </div>
         {{ block('form_widget_simple') }}
     {% endspaceless %}
 {% endblock %}
