Updated styles to work with entity multiple entries.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -142,6 +142,9 @@ div.manage a.btn.manage {
     width: 75%;
 }
 
+/*  ----------
+    :: Controls :: Collection
+    ---------- */
 .controls .collection-item {
     margin: 4px 0 9px;
 }
@@ -158,6 +161,13 @@ div.manage a.btn.manage {
     .form-horizontal .collection-item .control-group {
         display: inline;
     }
+
+ .control-group .controls label.checkbox {
+    display: inline-block;
+    float: left;
+    min-height: 20px;
+    padding-left: 40px;
+ }
 
 .form-actions {
     float: left;
