Extended file so to show image inline. Added to bundle for transition out of main build.

--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -18,3 +18,12 @@
     {{ block('form_widget_simple') }}
 {% endspaceless %}
 {% endblock telephone_widget %}
+
+{% block file_widget %}
+    {% spaceless %}
+    {{ block('form_widget') }}
+    {% if image_url is not null %}
+        <img src="{{ asset(image_url) }}"/>
+    {% endif %}
+    {% endspaceless %}
+{% endblock %}
