Updated console to display viw correctly. Updated User to include constants.

--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -22,8 +22,10 @@
 {% block file_widget %}
     {% spaceless %}
     {{ block('form_widget') }}
-    {% if image_url is not null %}
-        <img src="{{ asset(image_url) }}"/>
+    {% if image_url is defined and image_url is not null %}
+        <div class="preview">
+            <img src="{{ asset(image_url) | imagine_filter('thumb') }}" />
+        </div>
     {% endif %}
     {% endspaceless %}
 {% endblock %}
