Updated console display.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -82,6 +82,14 @@ div.manage a.btn.manage {
     .control-group ul.documents li { margin-bottom: 5px }
 
 /*  ----------
+    :: Manage Images
+    ---------- */
+.image-list .document.well {
+    display: inline-block;
+    width: 100%;
+}
+
+/*  ----------
     :: Preview Images
     ---------- */
 div.controls input[type="file"] {
