--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -24,5 +24,5 @@
 {% endblock %}
 
 {% block footer %}
-	<p>&copy; <a href="http://www.frodosghost.com" target="_blank">Manhattan Management Console</a> 2011</p>
+	<p>&copy; <a href="http://www.frodosghost.com" target="_blank">Manhattan Management Console</a></p>
 {% endblock footer %}
