--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -4,6 +4,7 @@
 {% stylesheets filter='less,cssembed,?yui_css'
         '@ManhattanConsoleBundle/Resources/public/less/bootstrap.less'
     	'@ManhattanConsoleBundle/Resources/public/less/console.less'
+        '@OrnjMarkdownBundle/Resources/public/css/*'
 %}
 <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
 {% endstylesheets %}
