Update to remove all MopaBootstrapBundle from setup and pages.
To remove dependency on Bootstrap we are removing all references and configuring based on Manhattan styles.

--- a/Resources/views/Form/fields.html.twig
+++ b/Resources/views/Form/fields.html.twig
@@ -1,5 +1,4 @@
-{% extends 'MopaBootstrapBundle:Form:fields.html.twig' %}
-{% from 'MopaBootstrapBundle::flash.html.twig' import flash %}
+{% extends 'form_div_layout.html.twig' %}
 
 {# Widgets #}
 
