Added Yahoo Pure.css for layout and styling. Added mixins and variables. Included new stylesheets in layouts.

--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -1,332 +1,19 @@
-body {
-	padding-top: 60px;
-	background-color: #EDEDED;
-    color: #555555;
-}
-form.actions-delete,
-.manage .btn.btn-danger {
-	display: inline-block;
-    margin: 0 0 0 3px;
-    position: relative;
-    float: right;
-}
-form label {
-	font-weight: bold;
-	color: #3f3f3f;
-}
+/* =============================================================================
+   There and Somewhere
 
-.page-header h1 span { font-weight: normal }
+   @author Antelope Studios
+   ========================================================================== */
 
-.records_list table td .btn-mini { margin:0.4em 0 }
+@import "variables.less";
+@import "mixins.less";
 
-/*  ----------
-    :: Manage Images
-    ---------- */
-.manage h1 {
-    font-size: 1.4em;
-    margin-bottom: 10px;
-}
-.manage h1 span {
-    font-weight: normal;
-}
-div.manage { position: relative }
-div.manage a.btn.manage {
-    position: absolute;
-    right: 0;
-}
-
-.image-list {
-    padding: 0 20px;
-}
-.image-list .image {
-    width: auto;
-    float: left;
-    padding: 0 10px;
-}
-
-.main-display {
-    max-width: 1170px;
-    margin: 0 auto;
-}
-
-.records_list.table.table-striped tbody {
-    background: #FCFCFC;
-}
-
-.separate-entity.entity-left {
-    border-top: 1px solid #E5E5E5;
-    padding: 10px 0;
-}
-/*  ----------
-    :: Manage Documents
-    ---------- */
-.document.well {
-    padding: 5px 15px;
-    position: relative;
-}
-    .document.well p { margin: 10px 120px 10px 10px }
-
-.document-list .document ul.actions {
-    list-style: none;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-}
-    .document-list .document ul.actions li { display: inline }
-    .document-list .document ul.actions:last-child { margin-right: 5px }
-
-.control-group ul.documents {
-    list-style: none;
-    margin: 0 0 10px;
-}
-    .control-group ul.documents li { margin-bottom: 5px }
-
-/*  ----------
-    :: Manage Images
-    ---------- */
-.image-list .document.well {
-    display: inline-block;
-    width: 100%;
-}
-
-/*  ----------
-    :: Preview Images
-    ---------- */
-div.controls input[type="file"] {
-    margin-left: 20px;
-}
-.control-group .preview {
-    margin-left: 170px;
-    padding: 10px;
-}
-
-.entity-left.control-group .controls { margin-left: 0 }
-.entity-left.control-group .controls .controls { margin-left: 160px }
-
-.control-group .photo-list .well {
-    display: inline-block;
-    width: 100%;
-    padding: 0;
-}
-
-.photo-list .well div {
-    width: 100%;
-    float: left;
-    display: inline-block;
-    margin: 0;
-}
-
-.photo-list .well .actions {
-    border-bottom: 1px solid #E3E3E3;
-    background: #E3E3E3;
-}
-
-.control-group .actions div {
-    float: left;
-    width: auto;
-    padding: 10px;
-}
-.control-group .actions ul {
-    list-style: none;
-    display: inline-block;
-    margin: 0;
-    padding: 10px;
-    float: right;
-}
-
-.control-group .actions li {
-    display: inline-block;
-    float: left;
-}
-
-.photo-list .well .image img {
-    padding: 10px;
-    float: left;
-    width: 120px;
-}
-.photo-list .well .image p {
-    padding: 10px;
-    float: left;
-    width: 75%;
-}
-
-/*  ----------
-    :: Controls :: Collection
-    ---------- */
-.controls .collection-item {
-    margin: 4px 0 9px;
-}
-.collection-item .control-group .controls {
-    width: 300px;
-    float:left;
-    margin-left: 0;
-}
-
-.collection-item .control-group:before, .collection-item .control-group:after {
-    display: inline-block;
-    content: none;
-}
-    .form-horizontal .collection-item .control-group {
-        display: inline;
-    }
-
- .control-group .controls label.checkbox {
-    display: inline-block;
-    float: left;
-    min-height: 20px;
-    padding-left: 40px;
- }
-
-.form-actions {
-    float: left;
-    border: 0 none;
-    width: 100%;
-}
-    .form-horizontal .form-actions,
-    .form-actions { padding: 20px 10px !important }
-    .form-actions form {
-        margin-bottom: 0;
-    }
-    .form-actions.last {
-        text-align: right;
-    }
-
-/*  ----------
-    :: Controls :: Field Layout
-    ---------- */
-.form-horizontal .controls.second-level {
-    border: 1px solid #E3E3E3;
-    float: left;
-    margin-left: 0;
-    padding: 20px 0 0;
-    width: 100%;
-}
-
-.second-level.control-group label { display: none }
-.second-level.control-group .controls label {
-    display: inline;
-}
-.form-horizontal .second-level.control-group .controls { margin-left: 0 }
-
-
-/*  ----------
-    :: Controls :: Field Errors
-    ---------- */
-.control-group.error .help- {
-    color: #B94A48;
-    display: inline-block;
-    float: left;
-    width: 100%;
-    padding-top: 5px;
-}
-
-
-/*  ----------
-    :: Nested Tree
-    ---------- */
-ul.nested-tree {
-    list-style: none;
-    margin: 0 25px 10px;
-}
-ul.nested-tree a { font-weight: bold }
-ul.nested-tree ul a { font-weight: normal }
-ul.nested-tree li {
-    border-top: 1px solid #DDDDDD;
-    padding: 10px 0;
-    text-align: left;
-    vertical-align: top;
-}
-
-ul.nested-tree ul {
-    margin: 0 0 10px 25px;
-    padding: 10px 0;
-}
-ul.nested-tree li .btn-small{
-    float: right;
-    text-align: center;
-    width: 70px;
-}
-    ul.nested-tree li .btn-small i {
-        margin-right: 15px;
-    }
-/*  ----------
-    :: Login Form
-    ---------- */
-.span4 .header { margin: 20px 0 30px }
-
-div.remember-me {
-    width: 100%;
-    display: inline-block;
-    margin-bottom: 10px;
-}
-div.remember-me label,
-div.remember-me input {
-    float: left;
-    line-height: 1.5em;
-}
-    div.remember-me label { margin-left: 10px; }
-
-/*  ----------
-    :: NavBar MainMenu Display
-    ---------- */
-.menu-dropdown {
-    margin-left: 0;
-    border: 1px solid #BBBBBB;
-    border-top: none;
-    display: none;
-    float: left;
-    list-style: none outside none;
-    min-width: 120px;
-    position: absolute;
-    z-index: 1000;
-    background: #F3F3F3;
-}
-    .menu-dropdown li a {
-        display: block;
-        padding: 0.5em 1.5em;
-    }
-    .nav .dropdown:hover ul.menu-dropdown { display: inline-block }
-
-    .navbar .nav .menu-dropdown li.active > a, .navbar .nav .menu-dropdown li.active > a:hover {
-        color: #366DDC;
-        font-weight: bold;
-    }
-    .navbar .nav .menu-dropdown li.active > a:hover { text-decoration: underline }
-    .menu-dropdown li:hover { background: #E4E4E4 }
-
-    .navbar .nav li.dropdown.active > .dropdown-toggle {
-        background: #EDEDED;
-        border-left: 1px solid #BBBBBB;
-        border-right: 1px solid #BBBBBB;
-    }
-    .navbar .nav li.dropdown.active:hover { background: #E4E4E4 !important }
-    .navbar .nav li.dropdown.active > .dropdown-toggle:hover { color: #333342; border-bottom: none; }
-
-    .menu-dropdown li a.main {
-        font-weight: bold;
-        padding: 0.5em 1.0em;
-    }
-
-    /*  ----------
-    :: Messages
-    ---------- */
-.content { position: relative;}
-#message.alert {
-    position: absolute;
-    right: 25px;
-    top: 0;
-}
-
-/*  ----------
+/* --------------------------------------------------
+   Table of Contents
+-----------------------------------------------------
+    :: Base Layout
+    :: Fonts
+    :: Header
+    :: Posts :: NewsBundle
+    :: Pagination
     :: Footer
-    ---------- */
-footer {
-    border-top: 1px solid #C6C6C6;
-    margin-top: 45px;
-    padding: 5px 0;
-    font-size: 0.8em;
-}
-    footer p {
-        color: #555555;
-        margin-bottom: 0;
-    }
+*/
