--- a/Resources/views/base.html.twig
+++ b/Resources/views/base.html.twig
@@ -8,8 +8,14 @@
 <head>
     <meta charset="UTF-8" />
     {% block head_style %}
-    {% stylesheets
-        'http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic|Open+Sans:400italic,700italic,400,700'
+    {% stylesheets filter='less,cssembed,cssrewrite,?yui_css' output='css/screen.css'
+        'http://fonts.googleapis.com/css?family=Droid+Serif:400,700|Open+Sans:400,700'
+        '@ManhattanConsoleBundle/Resources/public/css/normalize.css'
+        '@ManhattanConsoleBundle/Resources/public/css/buttons.css'
+        '@ManhattanConsoleBundle/Resources/public/css/forms.css'
+        '@ManhattanConsoleBundle/Resources/public/css/grids.css'
+        '@ManhattanConsoleBundle/Resources/public/css/menus.css'
+        '@ManhattanConsoleBundle/Resources/public/css/tables.css'
         '@ManhattanConsoleBundle/Resources/public/less/console.less'
     %}
     <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
