--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -2,6 +2,13 @@
 
 {% block head_style %}
 {% stylesheets filter='less,cssembed,?yui_css'
+        'http://fonts.googleapis.com/css?family=Droid+Serif:400,700|Open+Sans:400,700'
+        '@ManhattanConsoleBundle/Resources/public/css/normalize.css'
+        '@ManhattanConsoleBundle/Resources/public/css/buttons.css'
+        '@ManhattanConsoleBundle/Resources/public/css/forms.css'
+        '@ManhattanConsoleBundle/Resources/public/css/grids.css'
+        '@ManhattanConsoleBundle/Resources/public/css/menus.css'
+        '@ManhattanConsoleBundle/Resources/public/css/tables.css'
 	'@ManhattanConsoleBundle/Resources/public/less/console.less'
     '@OrnjMarkdownBundle/Resources/public/css/*'
 %}
