--- a/Resources/public/less/console.less
+++ b/Resources/public/less/console.less
@@ -1,5 +1,5 @@
 /* =============================================================================
-   There and Somewhere
+   Manhattan Management Console
 
    @author Antelope Studios
    ========================================================================== */
@@ -10,10 +10,5 @@
 /* --------------------------------------------------
    Table of Contents
 -----------------------------------------------------
-    :: Base Layout
-    :: Fonts
-    :: Header
-    :: Posts :: NewsBundle
-    :: Pagination
-    :: Footer
+
 */
