--- a/Resources/public/less/variables.less
+++ b/Resources/public/less/variables.less
@@ -2,9 +2,18 @@
     Manhattan Console Variables
   ---------------------------------------------------*/
 
-// Global values
+// Colours
 // --------------------------------------------------
 
+@lightGrey:                  #F2F1EC;
+@midGrey:                    #AAA9A5;
+@darkGrey:                   #565551;
+@heavyGrey:                  #333333;
+@white:                      #FFFFFF;
+
+@aquaBlue:                   #1F8DD6;
+
+@alertRed:                   #DD514C;
 
 // Typography
 // -------------------------
