--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -3,40 +3,47 @@
 {% block page_header %}{% endblock %}
 
 {% block fos_user_content %}
-<div class="row-fluid">
-    <div class="span12">
-        <div class="span4"></div>
-        <div class="span4">
-            <div class="header">
-                <h1>Login</h1>
-                <p>Please sign in with your <em>username</em> and <em>password</em>.</p>
-            </div>
+<div class="pure-u-1">
+    <div class="login">
 
+        <header class="login-header">
+            <h2>Console Login</h2>
+        </header>
+
+        <div class="l-box">
             {% if error %}
                 <div class="alert alert-error">{{ error|trans({}, 'FOSUserBundle') }}</div>
             {% endif %}
-            <form action="{{ path("fos_user_security_check") }}" class="form-stacked well" method="post" id="login">
+
+            <form action="{{ path("fos_user_security_check") }}" class="pure-form" method="post" id="login">
                 <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-                <div>
-                    <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-                    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+                <div class="pure-control-group">
+                    <input type="text" id="username" name="_username" value="{{ last_username }}" placeholder="{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}" />
                 </div>
 
-                <div>
-                    <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-                    <input type="password" id="password" name="_password" />
+                <div class="pure-control-group">
+                    <input type="password" id="password" name="_password" placeholder="{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}" />
                 </div>
 
-                <div class="remember-me">
+                <div class="pure-control-group">
                     <input type="checkbox" id="remember_me" name="_remember_me" value="" />
                     <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }}</label>
                 </div>
 
-                <input type="submit" class="btn primary" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
-            </form>
-            <a href="{{ path('fos_user_resetting_request') }}">Forgotten Password</a>
+                <div class="login-submit pure-control-group">
+                    <a href="{{ path('fos_user_resetting_request') }}" class="forgotten">Forgotten Password?</a>
+                    <input type="submit" class="pure-button pure-button-primary" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
+                </div>
+        </form>
         </div>
-        <div class="span4"></div>
+
+
+        <footer class="login-footer">
+            Copyright © 2012-{{ "now"|date("Y") }} Antelope Studios
+        </footer>
     </div>
 </div>
 {% endblock fos_user_content %}
+
+{% block navigationbar %}{% endblock navigationbar %}
+{% block footer %}{% endblock footer %}
