--- a/Resources/views/Resetting/request.html.twig
+++ b/Resources/views/Resetting/request.html.twig
@@ -4,34 +4,40 @@
 {% block page_header %}{% endblock %}
 
 {% block fos_user_content %}
-<div class="row-fluid">
-    <div class="span12">
-        <div class="span3"></div>
-        <div class="span6">
-            <div class="header">
-                <h1>Forgot your password?</h1>
-                <p>Please enter your email address</p>
-            </div>
+<div class="pure-u-1">
+    <div class="login">
 
-            <form action="{{ path('fos_user_resetting_send_email') }}" method="POST" class="form-stacked well" novalidate>
-            <div>
-                {% if invalid_username is defined %}
-                    <p>{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}, 'FOSUserBundle') }}</p>
-                {% endif %}
+        <header class="login-header">
+            <h2>Forgot your password?</h2>
+            <p>Please enter your email address</p>
+        </header>
 
-                <div>
-                    <label for="username">{{ 'resetting.request.username'|trans({}, 'FOSUserBundle') }}</label>
+        <div class="l-box">
+
+            {% if invalid_username is defined %}
+                <div class="alert error">{{ 'resetting.request.invalid_username'|trans({'%username%': invalid_username}, 'FOSUserBundle') }}</div>
+            {% endif %}
+
+            <form action="{{ path('fos_user_resetting_send_email') }}" class="pure-form" method="post" novalidate>
+
+                <div class="pure-control-group">
                     <input type="text" id="username" name="username" required="required" placeholder="{{ 'resetting.request.username'|trans({}, 'FOSUserBundle') }}" />
                 </div>
 
-            </div>
-            <div>
-                <input class="btn primary" type="submit" value="{{ 'resetting.request.submit'|trans({}, 'FOSUserBundle') }}" />
-            </div>
+                <div class="submit pure-control-group">
+                    <input type="submit" class="pure-button pure-button-primary" value="{{ 'resetting.request.submit'|trans({}, 'FOSUserBundle') }}" />
+                </div>
             </form>
         </div>
-        <div class="span3"></div>
+
+        <footer class="login-footer">
+            Copyright © 2011-{{ "now"|date("Y") }} Antelope Studios
+        </footer>
+
     </div>
 </div>
 
 {% endblock fos_user_content %}
+
+{% block navigationbar %}{% endblock navigationbar %}
+{% block footer %}{% endblock footer %}
