--- a/Resources/views/Resetting/request.html.twig
+++ b/Resources/views/Resetting/request.html.twig
@@ -1,7 +1,6 @@
 {% extends 'ManhattanConsoleBundle::layout.html.twig' %}
 
-{% block title %}Forgotten Password{% endblock %}
-{% block page_header %}{% endblock %}
+{% block title %}Manhattan Console: Forgotten Password{% endblock %}
 
 {% block fos_user_content %}
 <div class="pure-u-1">
