--- a/Resources/views/Security/login.html.twig
+++ b/Resources/views/Security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'ManhattanConsoleBundle::layout.html.twig' %}
 
-{% block page_header %}{% endblock %}
+{% block title %}Manhattan Console: Login{% endblock %}
 
 {% block fos_user_content %}
 <div class="pure-u-1">
