--- a/Resources/public/less/variables.less
+++ b/Resources/public/less/variables.less
@@ -11,14 +11,23 @@
 @heavyGrey:                  #333333;
 @white:                      #FFFFFF;
 
-@aquaBlue:                   #1F8DD6;
+@aquaBlue:                   #0E90D2;
+@lightBlue:                  #1B98F8;
+@darkBlue:                   rgb(37, 42, 58);
+@blueFocus:                  rgb(55, 60, 90);
 
-@alertRed:                   #DD514C;
+@yellow:                     #FAD232;
+@orange:                     #F37B1D;
+@red:                        #DD514C;
+@green:                      #5EB95E;
+@purple:                     #8058A5;
+
+@alertRed:                   @red;
 
 // Typography
 // -------------------------
 
-@sansFontFamily:        "Open Sans Light", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+@sansFontFamily:        "Open Sans", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 @serifFontFamily:       "Droid Serif", Georgia, "Times New Roman", Times, serif;
 @monoFontFamily:        Monaco, Menlo, Consolas, "Courier New", monospace;
 
