--- a/Resources/views/Resetting/request.html.twig
+++ b/Resources/views/Resetting/request.html.twig
@@ -30,7 +30,7 @@
         </div>
 
         <footer class="login-footer">
-            Copyright © 2011-{{ "now"|date("Y") }} Antelope Studios
+            Maintained by Antelope Studios, under MIT Licence.
         </footer>
 
     </div>
@@ -38,5 +38,7 @@
 
 {% endblock fos_user_content %}
 
+{% block content_class %}pure-u-1{% endblock content_class %}
 {% block navigationbar %}{% endblock navigationbar %}
+{% block container_id %}{% endblock container_id %}
 {% block footer %}{% endblock footer %}
